--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,154 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Clothing Best Apparels Online Store</title>
     <link rel="stylesheet" href="css/home.css" />
   </head>
   <body>
-    <nav class="navbar">
-      <div class="nav">
-        <img src="img/dark-logo.png" class="brand-logo" alt="" />
-        <div class="nav-items">
-          <div class="search">
-            <input
-              type="text"
-              class="search-box"
-              placeholder="Search brand or product"
-            />
-            <button class="search-btn">Search</button>
-          </div>
-          <a href="#"> <img src="img/user.png" alt="" /> </a>
-          <a href="#"> <img src="img/cart.png" alt="" /> </a>
-        </div>
+    <!-- Navbar -->
+    <nav class="navbar"></nav>
+    <!-- Hero section -->
+
+    <header class="hero-section">
+      <div class="content">
+        <img src="img/light-logo.png" class="logo" alt="" />
+        <p class="sub-heading">Trending</p>
       </div>
-      <ul class="links-container">
-        <li class="link-item">
-          <a href="#" class="link">Home</a>
-        </li>
-        <li class="link-item">
-          <a href="#" class="link">Woman</a>
-        </li>
-        <li class="link-item">
-          <a href="#" class="link">Men</a>
-        </li>
-        <li class="link-item">
-          <a href="#" class="link">Kids</a>
-        </li>
-        <li class="link-item">
-          <a href="#" class="link">Accessories</a>
-        </li>
-      </ul>
-    </nav>
+    </header>
+
+    <!-- cards-container -->
+    <section class="product">
+      <h2 class="product-category">Best Selling</h2>
+      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
+      <button class="nxt-btn"><img src="img/arrow.png" alt="" /></button>
+
+      <div class="product-container">
+        <!-- product cards -->
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card1.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card2.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card3.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card4.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card5.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card6.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card7.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card8.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <!-- product cards end -->
+      </div>
+    </section>
+
+    <script src="js/nav.js"></script>
   </body>
 </html>
