--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,296 @@
         <!-- product cards end -->
       </div>
     </section>
+    <!-- cards-container end-->
+
+    <!-- collections -->
+    <section class="collection-container">
+      <a href="#" class="collection">
+        <img src="img/women-collection.png" alt="" />
+        <p class="collection-title">women</p>
+      </a>
+      <a href="#" class="collection">
+        <img src="img/men-collection.png" alt="" />
+        <p class="collection-title">men</p>
+      </a>
+      <a href="#" class="collection">
+        <img src="img/accessories-collection.png" alt="" />
+        <p class="collection-title">accessories</p>
+      </a>
+    </section>
+    <!-- collections end-->
+
+    <!-- cards-container 2-->
+    <section class="product">
+      <h2 class="product-category">Shirts</h2>
+      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
+      <button class="nxt-btn"><img src="img/arrow.png" alt="" /></button>
+
+      <div class="product-container">
+        <!-- product cards -->
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/shirt1.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card2.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card3.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/shirt2.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/shirt3.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card6.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card7.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card8.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <!-- product cards end -->
+      </div>
+    </section>
+    <!-- cards-container 2 end-->
+
+    <!-- cards-container 3-->
+    <section class="product">
+      <h2 class="product-category">Shoes</h2>
+      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
+      <button class="nxt-btn"><img src="img/arrow.png" alt="" /></button>
+
+      <div class="product-container">
+        <!-- product cards -->
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card9.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card10.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card11.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card12.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card13.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card14.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card15.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <div class="product-card">
+          <div class="product-image">
+            <span class="discount-tag">50% off</span>
+            <img src="img/card16.png" class="product-thumb" alt="" />
+            <button class="card-btn">add to whish list</button>
+          </div>
+          <div class="product-info">
+            <h2 class="product-brand">brand</h2>
+            <p class="product-short-des">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
+              dolor!
+            </p>
+            <span class="price">$20</span><span class="actual-price">$40</span>
+          </div>
+        </div>
+        <!-- product cards end -->
+      </div>
+    </section>
+    <!-- cards-container 3 end-->
+
+    <!-- footer -->
+
+    <footer></footer>
 
     <script src="js/nav.js"></script>
+    <script src="js/home.js"></script>
   </body>
 </html>
