--- a/public/product.html
+++ b/public/product.html
@@ -3,172 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width, initial-scale=1.0" />
-    <title>Clothing Best Apparels Online Store</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Product -</title>
     <link rel="stylesheet" href="css/home.css" />
     <link rel="stylesheet" href="css/nav.css" />
+    <link rel="stylesheet" href="css/product.css" />
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar"></nav>
-    <!-- Hero section -->
-
-    <header class="hero-section">
-      <div class="content">
-        <img src="img/light-logo.png" class="logo" alt="" />
-        <p class="sub-heading">Trending</p>
-      </div>
-    </header>
-
-    <!-- cards-container -->
-    <section class="product">
-      <h2 class="product-category">Best Selling</h2>
-      <button class="pre-btn"><img src="img/arrow.png" alt="" /></button>
-      <button class="nxt-btn"><img src="img/arrow.png" alt="" /></button>
-
-      <div class="product-container">
-        <!-- product cards -->
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card1.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card2.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card3.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card4.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card5.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card6.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card7.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <div class="product-card">
-          <div class="product-image">
-            <span class="discount-tag">50% off</span>
-            <img src="img/card8.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to whish list</button>
-          </div>
-          <div class="product-info">
-            <h2 class="product-brand">brand</h2>
-            <p class="product-short-des">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nostrum,
-              dolor!
-            </p>
-            <span class="price">$20</span><span class="actual-price">$40</span>
-          </div>
-        </div>
-        <!-- product cards end -->
-      </div>
-    </section>
-    <!-- cards-container end-->
-
-    <!-- collections -->
-    <section class="collection-container">
-      <a href="#" class="collection">
-        <img src="img/women-collection.png" alt="" />
-        <p class="collection-title">women</p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/men-collection.png" alt="" />
-        <p class="collection-title">men</p>
-      </a>
-      <a href="#" class="collection">
-        <img src="img/accessories-collection.png" alt="" />
-        <p class="collection-title">accessories</p>
-      </a>
-    </section>
-    <!-- collections end-->
 
     <!-- cards-container 2-->
     <section class="product">
@@ -434,14 +276,12 @@
         <!-- product cards end -->
       </div>
     </section>
-    <!-- cards-container 3 end-->
-
-    <!-- footer -->
+    <!-- cards-container 3 end -->
 
     <footer></footer>
-
     <script src="js/nav.js"></script>
     <script src="js/footer.js"></script>
     <script src="js/home.js"></script>
+    <script src="js/product.js"></script>
   </body>
 </html>
