changing background by click

--- a/public/product.html
+++ b/public/product.html
@@ -47,6 +47,16 @@
       </div>
     </section>
 
+    <section class="detail-des">
+      <h2 class="heading">description</h2>
+      <p class="des">
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit
+        dolores impedit cupiditate dolorem error vel, deleniti exercitationem
+        eveniet. Vel, nostrum ea reiciendis eum eaque perferendis repellendus
+        distinctio dolor iure minima.
+      </p>
+    </section>
+
     <!-- cards-container 2-->
     <section class="product">
       <h2 class="product-category">Shirts</h2>
